@@ -2,4 +2,6 @@ Changes for 1.0.0:
 
 - Added AnyType for empty, scalar, structured and array types with value semantics
 - Added AnyValue for empty, scalar, structured and array values with value semantics
+- Added casting of AnyValue to C-types
+- Added JSON serialization
 - Provided Sphinx documentation
